Change in other plugins: new Integer() calls to Integer.valueOf() new Integer().intValue() to Integer.parseInt()
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@1506 ef53c05b-3124-4d59-ae7d-fe3273f42be7