@@ -51,7 +51,7 @@ public final class Stat extends BonusObj
 		{
 			if (bonusTags[i].equals(token))
 			{
-				addBonusInfo(new Integer(i));
+				addBonusInfo(Integer.valueOf(i));
 
 				return true;
 			}
