@@ -102,7 +102,7 @@ public class StartEvent extends javax.swing.JDialog
 		this.initiative = initiative;
 		tName.grabFocus();
 		tPlayer.setText(player);
-		lInit.setValue(new Integer(init));
+		lInit.setValue(Integer.valueOf(init));
 		initCheckBox();
 	}
 
@@ -299,7 +299,7 @@ public class StartEvent extends javax.swing.JDialog
 		initiativeLabel = new javax.swing.JLabel();
 		sInit = Utils.buildSlider(1,50);
 		lInit = Utils.buildIntegerFieldWithSlider(sInit);
-		lInit.setValue(new Integer(1));
+		lInit.setValue(Integer.valueOf(1));
 
 		java.awt.GridBagConstraints gridBagConstraints;
 		initiativeLabel.setText("Initiative");
@@ -336,7 +336,7 @@ public class StartEvent extends javax.swing.JDialog
 		durationLabel = new javax.swing.JLabel();
 		sDuration = Utils.buildSlider(1,50);
 		lDuration = Utils.buildIntegerFieldWithSlider(sDuration);
-		lDuration.setValue(new Integer(1));
+		lDuration.setValue(Integer.valueOf(1));
 
 		java.awt.GridBagConstraints gridBagConstraints;
 		durationLabel.setText("Duration");
