@@ -208,13 +208,13 @@ public class NetworkModel {
 		ExtendedHTMLEditorKit htmlKit = new ExtendedHTMLEditorKit();
 		pane.setEditorKit(htmlKit);
 		ExtendedHTMLDocument extDoc = (ExtendedHTMLDocument) (htmlKit.createDefaultDocument());
-		extDoc.putProperty("number", new Integer(0));
+		extDoc.putProperty("number", Integer.valueOf(0));
 		logPane.add("Logs", new JScrollPane(pane));
 
 		JTextPane pane2 = new JTextPane();
 		EditorKit kit = pane2.getEditorKit();
 		Document doc = kit.createDefaultDocument();
-		doc.putProperty("number", new Integer(1));
+		doc.putProperty("number", Integer.valueOf(1));
 	}
 
 	public void log(String title, String message) {
